--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -1,13 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: UlmBlois_website\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-03 08:12+0200\n"
-"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: POEditor.com\n"
+"Project-Id-Version: UlmBlois_website\n"
+"Language: fr\n"
 
 #: core/form.py:41 meeting/templates/index.html:64
 msgid "str_Register"
@@ -22,9 +20,7 @@ msgstr "Envoyer"
 #. Translators: optional
 #: core/management/commands/send_reservation_confirmation_request.py:38
 msgid "str_Helptext_send_resevation_conifirmation_request"
-msgstr ""
-"Envoi d'un courriel demandant aux utilisateurs de confirmer leur réservation "
-"x jours avant la manifestation"
+msgstr "Envoi d'un courriel demandant aux utilisateurs de confirmer leur réservation x jours avant la manifestation"
 
 #: core/management/commands/send_reservation_confirmation_request.py:43
 msgid "str_Confirmation_Reminder_Email_Subject"
@@ -35,6 +31,7 @@ msgstr "Veuillez confirmer votre réservation"
 msgid "str_User_Successfully_Deleted_Message"
 msgstr "L'utilisateur %(user)s a été supprimé"
 
+#. Dans quel contexte ? en français  Global ou globaux
 #: faq/admin.py:36 faq/admin.py:50 pages/admin.py:38
 msgid "str_Globals"
 msgstr "Globaux"
@@ -120,6 +117,7 @@ msgstr "Constructeur"
 msgid "str_model"
 msgstr "Modèle"
 
+#. Pourquoi ce n'est pas traduit en français sur le site (au niveau du profil)
 #: meeting/filters.py:74 meeting/models.py:178
 #: meeting/templates/includes/elements/pilot_info.html:20
 #: meeting/templates/staff_pilot_list.html:51
@@ -135,29 +133,6 @@ msgstr "Les créneaux d'arrivée et de départ doivent être différents"
 msgid "str_Error_Depart_Timeslot_Anterior_To_Arrival"
 msgstr "Le créneau d'arrivée doit être postérieur au créneau de départ"
 
-#: meeting/form.py:123 meeting/templates/includes/elements/pilot_info.html:28
-#: meeting/templates/staff_reservation_validation.html:67
-msgid "str_Phone_number"
-msgstr "Numéro de téléphone où l'on pourra vous joindre sur le salon"
-
-#: meeting/form.py:124 meeting/models.py:183
-msgid "str_helptext_phonenumber"
-msgstr "Numéro de téléphone où l'on pourra vous joindre sur le salon"
-
-#: meeting/form.py:154
-msgid "str_Contact_info"
-msgstr ""
-
-#: meeting/form.py:171 meeting/templates/pilot_reservation_list.html:41
-#: meeting/templates/pilot_ulm_list.html:8
-msgid "str_Add_new"
-msgstr "Nouvel ajout"
-
-#: meeting/form.py:172 meeting/templates/pilot_summary.html:25
-#: meeting/templates/staff_reservation_validation.html:124
-msgid "str_ULM"
-msgstr "ULM"
-
 #: meeting/models.py:118
 msgid "str_Error_Timeslot_Start_Superior_End"
 msgstr "Le créneau de début est postérieur à la date de fin"
@@ -170,21 +145,13 @@ msgstr "Le créneau de début est en dehors de la période de la manifestation"
 msgid "str_Error_Timeslot_End_Out_Of_Meeting"
 msgstr "Le créneau de fin est en dehors de la période de la manifestation"
 
-#: meeting/models.py:180 meeting/templates/includes/elements/pilot_info.html:24
-#: meeting/templates/staff_pilot_list.html:52
-#: meeting/templates/staff_reservation_validation.html:63
-msgid "str_Insurance_number"
-msgstr "Numéro de police d'assurance"
-
-#: meeting/models.py:182 meeting/templates/includes/elements/pilot_info.html:16
-#: meeting/templates/staff_pilot_list.html:53
-#: meeting/templates/staff_reservation_validation.html:55
-msgid "str_Licence_number"
-msgstr "Numéro de Licence"
-
 #: meeting/models.py:198
 msgid "str_Reservation_Validation_Permission"
 msgstr "Valider l'arrivée et la réservation de carburant"
+
+#: meeting/models.py:208
+msgid "str_Powered_Paraglider"
+msgstr "Paramoteurs"
 
 #: meeting/models.py:235
 msgid "str_Flex_Wing"
@@ -206,14 +173,13 @@ msgstr "Helicoptères"
 msgid "str_Balloons_and_Airships"
 msgstr "Ballon et aérostat"
 
-#: meeting/models.py:299
-msgid "str_Airfield_ID"
-msgstr ""
+#: meeting/models.py:271
+msgid "str_Airfield_OACI_code"
+msgstr "Code du terrain (base)"
 
 #: meeting/models.py:312
 msgid "str_Error_Reservation_Allready_Exist"
-msgstr ""
-"Vous avez déjà une réservation pour cette manifestation, veuillez l'éditer"
+msgstr "Vous avez déjà une réservation pour cette manifestation, veuillez l'éditer"
 
 #: meeting/models.py:362
 #: meeting/templates/includes/elements/reservation_detail.html:13
@@ -224,17 +190,28 @@ msgstr ""
 msgid "str_Pilot"
 msgstr "Pilote"
 
-#: meeting/templates/aviable_timeslot.html:5
-msgid "str_Timeslot_aviable"
-msgstr ""
-
 #: meeting/templates/includes/elements/empty_modal.html:19
 msgid "str_Close"
 msgstr "Fermé"
 
-#: meeting/templates/includes/elements/pilot_info.html:32
-msgid "str_Postal_address"
-msgstr ""
+#. Pourquoi ce n'est pas traduit en français sur le site (au niveau du profil)
+#: meeting/models.py:182 meeting/templates/includes/elements/pilot_info.html:16
+#: meeting/templates/staff_pilot_list.html:53
+#: meeting/templates/staff_reservation_validation.html:55
+msgid "str_Licence_number"
+msgstr "Numéro de Licence"
+
+#. Pourquoi ce n'est pas traduit en français sur le site (au niveau du profil)
+#: meeting/models.py:180 meeting/templates/includes/elements/pilot_info.html:24
+#: meeting/templates/staff_pilot_list.html:52
+#: meeting/templates/staff_reservation_validation.html:63
+msgid "str_Insurance_number"
+msgstr "Numéro de police d'assurance"
+
+#: meeting/form.py:123 meeting/templates/includes/elements/pilot_info.html:28
+#: meeting/templates/staff_reservation_validation.html:67
+msgid "str_Phone_number"
+msgstr "Numéro de téléphone où l'on pourra vous joindre sur le salon"
 
 #: meeting/templates/includes/elements/reservation_detail.html:7
 msgid "str_Meeting"
@@ -327,7 +304,6 @@ msgstr "Détails de la réservation"
 
 #. Translators: contain the meeting start date as %(start)s and end date as %(end)s
 #: meeting/templates/index.html:9
-#, python-format
 msgid "From the %(start)s, to the %(end)s."
 msgstr "Du %(start)s, au %(end)s"
 
@@ -409,6 +385,11 @@ msgstr "Aucun créneau disponible"
 msgid "str_Your_reservations"
 msgstr "Vos réservations"
 
+#: meeting/form.py:171 meeting/templates/pilot_reservation_list.html:41
+#: meeting/templates/pilot_ulm_list.html:8
+msgid "str_Add_new"
+msgstr "Nouvel ajout"
+
 #: meeting/templates/pilot_reservation_list.html:61
 #: meeting/templates/pilot_reservation_list.html:79
 msgid "str_Confirm"
@@ -439,6 +420,11 @@ msgstr "En attente de validation"
 #: meeting/templates/pilot_summary.html:5
 msgid "str_Pilot_overview"
 msgstr "Résumé pilote"
+
+#: meeting/form.py:172 meeting/templates/pilot_summary.html:25
+#: meeting/templates/staff_reservation_validation.html:124
+msgid "str_ULM"
+msgstr "ULM"
 
 #: meeting/templates/pilot_summary.html:41
 msgid "str_Reservations"
@@ -548,9 +534,7 @@ msgstr "L'ULM %(ulm)s a été supprimé"
 #. Translators: This contain the ulm name acces by %(ulm)s
 #: meeting/views/pilot.py:123
 msgid "str_message_delete_ulm_link_to_reservation"
-msgstr ""
-"L'ULM %(ulm)s que vous essayez d'effacer est lié à une réservation active et "
-"ne peut être effacé"
+msgstr "L'ULM %(ulm)s que vous essayez d'effacer est lié à une réservation active et ne peut être effacé"
 
 #: meeting/widgets.py:13
 msgid "str_Unknown"
@@ -640,9 +624,10 @@ msgstr "Arrivée en vol des ULM"
 msgid "str_Microlight_departure"
 msgstr "Départ des ULM"
 
+#. Attention flex wings = pendulaire. ce n'est pas plutôt  procédure pour les paramoteurs ?
 #: pages/templates/pilot_informations.html:22
-msgid "str_Powered_paraglider_procedure"
-msgstr ""
+msgid "str_Flex_wings_procedure"
+msgstr "Pendulaire"
 
 #: pages/templates/pilot_informations.html:26
 msgid "str_Plane_procedure"
@@ -791,14 +776,6 @@ msgstr "Légal"
 msgid "str_Management"
 msgstr "Direction"
 
-#: templates/includes/logged_sidebar.html:33
-msgid "str_Administration"
-msgstr ""
-
-#: templates/includes/logged_sidebar.html:36
-msgid "str_Administration_zone"
-msgstr ""
-
 #: templates/includes/logged_sidebar.html:40
 msgid "str_General"
 msgstr "Général"
@@ -912,23 +889,52 @@ msgstr "La réinitialisation de votre mot de passe a échoué"
 
 #: templates/registration/password_reset_confirm.html:32
 msgid "str_password_reset_link_invalid"
-msgstr ""
-"Le lien de réinitialisation de votre mot de passe est invalide\n"
-"Peut-être a t-il déjà été utilisé. Merci de faire une nouvelle demande de "
-"réinitialisation"
+msgstr "Le lien de réinitialisation de votre mot de passe est invalide\n"
+"Peut-être a t-il déjà été utilisé. Merci de faire une nouvelle demande de réinitialisation"
 
 #: templates/registration/password_reset_done.html:5
 msgid "str_password_reset_email_sent"
-msgstr ""
-"Nous vous avons envoyé les instructions pour réinitialiser votre mot de "
-"passe.\n"
-"Si elles ne sont pas arrivées d'ici quelques minutes, vérifier votre dossier "
-"des courriers indésirables (spam)"
+msgstr "Nous vous avons envoyé les instructions pour réinitialiser votre mot de passe.\n"
+"Si elles ne sont pas arrivées d'ici quelques minutes, vérifier votre dossier des courriers indésirables (spam)"
 
 #: templates/registration/password_reset_form.html:46
 #: templates/registration/register.html:46
 msgid "str_already_have_an_account"
 msgstr "Avez-vous déjà un compte ? Connecter vous !"
 
-#~ msgid "str_Powered_Paraglider"
-#~ msgstr "Paramoteurs"
+#: pages/templates/pilot_informations.html:22
+msgid "str_Powered_paraglider_procedure"
+msgstr "Procédure paramoteurs"
+
+#: templates/includes/logged_sidebar.html:28
+msgid "str_administrator_zone"
+msgstr "Espace administrateur"
+
+#: templates/includes/logged_sidebar.html:33
+msgid "str_Administration"
+msgstr "Administration"
+
+#: templates/includes/logged_sidebar.html:36
+msgid "str_Administration_zone"
+msgstr "Espace administration"
+
+#: meeting/form.py:124 meeting/models.py:183
+msgid "str_helptext_phonenumber"
+msgstr "Numéro de téléphone où l'on pourra vous joindre sur le salon"
+
+#: meeting/form.py:154
+msgid "str_Contact_info"
+msgstr "Information contact"
+
+#: meeting/models.py:299
+msgid "str_Airfield_ID"
+msgstr "Identifiant de l'aérodrome de départ"
+
+#: meeting/templates/includes/elements/pilot_info.html:32
+msgid "str_Postal_address"
+msgstr "Adresse postale"
+
+#: meeting/templates/aviable_timeslot.html:5
+msgid "str_Timeslot_aviable"
+msgstr ""
+
